// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`state action split button - renders primary variant 1`] = `
<DropdownToggle
  id="Dropdown Toggle"
  parentRef={<div />}
  splitButtonItems={
    Array [
      <div>
        test
      </div>,
    ]
  }
  splitButtonVariant="action"
  toggleVariant="primary"
>
  <div
    className="pf-c-dropdown__toggle pf-m-split-button pf-m-action pf-m-primary"
  >
    <div
      key="1"
    >
      test
    </div>
    <Toggle
      aria-label="Select"
      bubbleEvent={false}
      className=""
      data-ouia-component-id="OUIA-Generated-DropdownToggle-11"
      data-ouia-component-type="PF4/DropdownToggle"
      data-ouia-safe={true}
      getMenuRef={null}
      id="Dropdown Toggle"
      isActive={false}
      isDisabled={false}
      isOpen={false}
      isPlain={false}
      isPrimary={false}
      isSplitButton={true}
      isText={false}
      onEnter={[Function]}
      onToggle={[Function]}
      parentRef={<div />}
      toggleVariant="primary"
    >
      <button
        aria-expanded={false}
        aria-label="Select"
        className="pf-c-dropdown__toggle-button pf-m-primary"
        data-ouia-component-id="OUIA-Generated-DropdownToggle-11"
        data-ouia-component-type="PF4/DropdownToggle"
        data-ouia-safe={true}
        disabled={false}
        id="Dropdown Toggle"
        onClick={[Function]}
        onKeyDown={[Function]}
        type="button"
      >
        <span
          className=""
        >
          Dropdown
        </span>
        <span
          className=""
        >
          <CaretDownIcon
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 320 512"
              width="1em"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
              />
            </svg>
          </CaretDownIcon>
        </span>
      </button>
    </Toggle>
  </div>
</DropdownToggle>
`;

exports[`state active 1`] = `
<DropdownToggle
  id="Dropdown Toggle"
  isActive={true}
  parentRef={<div />}
>
  <Toggle
    bubbleEvent={false}
    className=""
    data-ouia-component-id="OUIA-Generated-DropdownToggle-6"
    data-ouia-component-type="PF4/DropdownToggle"
    data-ouia-safe={true}
    getMenuRef={null}
    id="Dropdown Toggle"
    isActive={true}
    isDisabled={false}
    isOpen={false}
    isPlain={false}
    isPrimary={false}
    isSplitButton={false}
    isText={false}
    onEnter={[Function]}
    onToggle={[Function]}
    parentRef={<div />}
    toggleVariant="default"
  >
    <button
      aria-expanded={false}
      className="pf-c-dropdown__toggle pf-m-active"
      data-ouia-component-id="OUIA-Generated-DropdownToggle-6"
      data-ouia-component-type="PF4/DropdownToggle"
      data-ouia-safe={true}
      disabled={false}
      id="Dropdown Toggle"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    >
      <span
        className=""
      >
        Dropdown
      </span>
      <span
        className=""
      >
        <CaretDownIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
        </CaretDownIcon>
      </span>
    </button>
  </Toggle>
</DropdownToggle>
`;

exports[`state button variant - primary 1`] = `
<DropdownToggle
  id="Dropdown Toggle"
  parentRef={<div />}
  toggleVariant="primary"
>
  <Toggle
    bubbleEvent={false}
    className=""
    data-ouia-component-id="OUIA-Generated-DropdownToggle-8"
    data-ouia-component-type="PF4/DropdownToggle"
    data-ouia-safe={true}
    getMenuRef={null}
    id="Dropdown Toggle"
    isActive={false}
    isDisabled={false}
    isOpen={false}
    isPlain={false}
    isPrimary={false}
    isSplitButton={false}
    isText={false}
    onEnter={[Function]}
    onToggle={[Function]}
    parentRef={<div />}
    toggleVariant="primary"
  >
    <button
      aria-expanded={false}
      className="pf-c-dropdown__toggle pf-m-primary"
      data-ouia-component-id="OUIA-Generated-DropdownToggle-8"
      data-ouia-component-type="PF4/DropdownToggle"
      data-ouia-safe={true}
      disabled={false}
      id="Dropdown Toggle"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    >
      <span
        className=""
      >
        Dropdown
      </span>
      <span
        className=""
      >
        <CaretDownIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
        </CaretDownIcon>
      </span>
    </button>
  </Toggle>
</DropdownToggle>
`;

exports[`state button variant - secondary 1`] = `
<DropdownToggle
  id="Dropdown Toggle"
  parentRef={<div />}
  toggleVariant="secondary"
>
  <Toggle
    bubbleEvent={false}
    className=""
    data-ouia-component-id="OUIA-Generated-DropdownToggle-9"
    data-ouia-component-type="PF4/DropdownToggle"
    data-ouia-safe={true}
    getMenuRef={null}
    id="Dropdown Toggle"
    isActive={false}
    isDisabled={false}
    isOpen={false}
    isPlain={false}
    isPrimary={false}
    isSplitButton={false}
    isText={false}
    onEnter={[Function]}
    onToggle={[Function]}
    parentRef={<div />}
    toggleVariant="secondary"
  >
    <button
      aria-expanded={false}
      className="pf-c-dropdown__toggle pf-m-secondary"
      data-ouia-component-id="OUIA-Generated-DropdownToggle-9"
      data-ouia-component-type="PF4/DropdownToggle"
      data-ouia-safe={true}
      disabled={false}
      id="Dropdown Toggle"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    >
      <span
        className=""
      >
        Dropdown
      </span>
      <span
        className=""
      >
        <CaretDownIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
        </CaretDownIcon>
      </span>
    </button>
  </Toggle>
</DropdownToggle>
`;

exports[`state button variant - secondary 2`] = `
<DropdownToggle
  id="Dropdown Toggle"
  isPlain={true}
  isText={true}
  parentRef={<div />}
>
  <Toggle
    bubbleEvent={false}
    className=""
    data-ouia-component-id="OUIA-Generated-DropdownToggle-10"
    data-ouia-component-type="PF4/DropdownToggle"
    data-ouia-safe={true}
    getMenuRef={null}
    id="Dropdown Toggle"
    isActive={false}
    isDisabled={false}
    isOpen={false}
    isPlain={true}
    isPrimary={false}
    isSplitButton={false}
    isText={true}
    onEnter={[Function]}
    onToggle={[Function]}
    parentRef={<div />}
    toggleVariant="default"
  >
    <button
      aria-expanded={false}
      className="pf-c-dropdown__toggle pf-m-plain pf-m-text"
      data-ouia-component-id="OUIA-Generated-DropdownToggle-10"
      data-ouia-component-type="PF4/DropdownToggle"
      data-ouia-safe={true}
      disabled={false}
      id="Dropdown Toggle"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    >
      <span
        className=""
      >
        Dropdown
      </span>
      <span
        className=""
      >
        <CaretDownIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
        </CaretDownIcon>
      </span>
    </button>
  </Toggle>
</DropdownToggle>
`;

exports[`state class changes 1`] = `
<DropdownToggle
  id="Dropdown Toggle"
  parentRef={<div />}
>
  <Toggle
    bubbleEvent={false}
    className=""
    data-ouia-component-id="OUIA-Generated-DropdownToggle-13"
    data-ouia-component-type="PF4/DropdownToggle"
    data-ouia-safe={true}
    getMenuRef={null}
    id="Dropdown Toggle"
    isActive={false}
    isDisabled={false}
    isOpen={false}
    isPlain={false}
    isPrimary={false}
    isSplitButton={false}
    isText={false}
    onEnter={[Function]}
    onToggle={[Function]}
    parentRef={<div />}
    toggleVariant="default"
  >
    <button
      aria-expanded={false}
      className="pf-c-dropdown__toggle"
      data-ouia-component-id="OUIA-Generated-DropdownToggle-13"
      data-ouia-component-type="PF4/DropdownToggle"
      data-ouia-safe={true}
      disabled={false}
      id="Dropdown Toggle"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    >
      <span
        className="some-test-class"
      >
        Dropdown
      </span>
      <span
        className="another-test-class"
      >
        <CaretDownIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
        </CaretDownIcon>
      </span>
    </button>
  </Toggle>
</DropdownToggle>
`;

exports[`state class changes 2`] = `
<DropdownToggle
  id="Dropdown Toggle"
  parentRef={<div />}
>
  <Toggle
    bubbleEvent={false}
    className=""
    data-ouia-component-id="OUIA-Generated-DropdownToggle-14"
    data-ouia-component-type="PF4/DropdownToggle"
    data-ouia-safe={true}
    getMenuRef={null}
    id="Dropdown Toggle"
    isActive={false}
    isDisabled={false}
    isOpen={false}
    isPlain={false}
    isPrimary={false}
    isSplitButton={false}
    isText={false}
    onEnter={[Function]}
    onToggle={[Function]}
    parentRef={<div />}
    toggleVariant="default"
  >
    <button
      aria-expanded={false}
      className="pf-c-dropdown__toggle"
      data-ouia-component-id="OUIA-Generated-DropdownToggle-14"
      data-ouia-component-type="PF4/DropdownToggle"
      data-ouia-safe={true}
      disabled={false}
      id="Dropdown Toggle"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    >
      <span
        className="some-test-class"
      >
        Dropdown
      </span>
      <span
        className="another-test-class"
      >
        <CaretDownIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
        </CaretDownIcon>
      </span>
    </button>
  </Toggle>
</DropdownToggle>
`;

exports[`state focus 1`] = `
<DropdownToggle
  id="Dropdown Toggle"
  parentRef={<div />}
>
  <Toggle
    bubbleEvent={false}
    className=""
    data-ouia-component-id="OUIA-Generated-DropdownToggle-7"
    data-ouia-component-type="PF4/DropdownToggle"
    data-ouia-safe={true}
    getMenuRef={null}
    id="Dropdown Toggle"
    isActive={false}
    isDisabled={false}
    isOpen={false}
    isPlain={false}
    isPrimary={false}
    isSplitButton={false}
    isText={false}
    onEnter={[Function]}
    onToggle={[Function]}
    parentRef={<div />}
    toggleVariant="default"
  >
    <button
      aria-expanded={false}
      className="pf-c-dropdown__toggle"
      data-ouia-component-id="OUIA-Generated-DropdownToggle-7"
      data-ouia-component-type="PF4/DropdownToggle"
      data-ouia-safe={true}
      disabled={false}
      id="Dropdown Toggle"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    >
      <span
        className=""
      >
        Dropdown
      </span>
      <span
        className=""
      >
        <CaretDownIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
        </CaretDownIcon>
      </span>
    </button>
  </Toggle>
</DropdownToggle>
`;

exports[`state hover 1`] = `
<DropdownToggle
  id="Dropdown Toggle"
  parentRef={<div />}
>
  <Toggle
    bubbleEvent={false}
    className=""
    data-ouia-component-id="OUIA-Generated-DropdownToggle-5"
    data-ouia-component-type="PF4/DropdownToggle"
    data-ouia-safe={true}
    getMenuRef={null}
    id="Dropdown Toggle"
    isActive={false}
    isDisabled={false}
    isOpen={false}
    isPlain={false}
    isPrimary={false}
    isSplitButton={false}
    isText={false}
    onEnter={[Function]}
    onToggle={[Function]}
    parentRef={<div />}
    toggleVariant="default"
  >
    <button
      aria-expanded={false}
      className="pf-c-dropdown__toggle"
      data-ouia-component-id="OUIA-Generated-DropdownToggle-5"
      data-ouia-component-type="PF4/DropdownToggle"
      data-ouia-safe={true}
      disabled={false}
      id="Dropdown Toggle"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    >
      <span
        className=""
      >
        Dropdown
      </span>
      <span
        className=""
      >
        <CaretDownIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
        </CaretDownIcon>
      </span>
    </button>
  </Toggle>
</DropdownToggle>
`;

exports[`state split button - does not render primary variant 1`] = `
<DropdownToggle
  id="Dropdown Toggle"
  parentRef={<div />}
  splitButtonItems={
    Array [
      <div>
        test
      </div>,
    ]
  }
  toggleVariant="primary"
>
  <div
    className="pf-c-dropdown__toggle pf-m-split-button"
  >
    <div
      key="0"
    >
      test
    </div>
    <Toggle
      aria-label="Select"
      bubbleEvent={false}
      className=""
      data-ouia-component-id="OUIA-Generated-DropdownToggle-12"
      data-ouia-component-type="PF4/DropdownToggle"
      data-ouia-safe={true}
      getMenuRef={null}
      id="Dropdown Toggle"
      isActive={false}
      isDisabled={false}
      isOpen={false}
      isPlain={false}
      isPrimary={false}
      isSplitButton={true}
      isText={false}
      onEnter={[Function]}
      onToggle={[Function]}
      parentRef={<div />}
      toggleVariant="primary"
    >
      <button
        aria-expanded={false}
        aria-label="Select"
        className="pf-c-dropdown__toggle-button pf-m-primary"
        data-ouia-component-id="OUIA-Generated-DropdownToggle-12"
        data-ouia-component-type="PF4/DropdownToggle"
        data-ouia-safe={true}
        disabled={false}
        id="Dropdown Toggle"
        onClick={[Function]}
        onKeyDown={[Function]}
        type="button"
      >
        <span
          className=""
        >
          Dropdown
        </span>
        <span
          className=""
        >
          <CaretDownIcon
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 320 512"
              width="1em"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
              />
            </svg>
          </CaretDownIcon>
        </span>
      </button>
    </Toggle>
  </div>
</DropdownToggle>
`;
